--- a/kotlin-agendacalendarview/src/main/res/layout/view_agenda.xml
+++ b/kotlin-agendacalendarview/src/main/res/layout/view_agenda.xml
@@ -15,7 +15,7 @@
 			>
 	</View>
 
-	<android.support.v4.widget.SwipeRefreshLayout
+	<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
 		android:id="@+id/refresh_layout"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
@@ -31,7 +31,7 @@
 			android:scrollbars="none"
 			android:scrollingCache="false"
 			/>
-	</android.support.v4.widget.SwipeRefreshLayout>
+	</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 	</LinearLayout>
 
 </merge>
