--- a/kotlin-agendacalendarview/src/main/res/layout/view_day_calendar_header.xml
+++ b/kotlin-agendacalendarview/src/main/res/layout/view_day_calendar_header.xml
@@ -6,4 +6,4 @@
     android:gravity="center"
     android:padding="4dp"
     android:textColor="@android:color/white"
-    android:textSize="11dp"></TextView>
+    android:textSize="11dp" />
