--- a/kotlin-agendacalendarview/src/main/res/values/styles.xml
+++ b/kotlin-agendacalendarview/src/main/res/values/styles.xml
@@ -14,14 +14,14 @@
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:textColor">@color/calendar_text_default</item>
 		<item name="android:textStyle">normal</item>
-		<item name="android:textSize">12dp</item>
+		<item name="android:textSize">12sp</item>
 	</style>
 
 	<!-- Agenda styles -->
 	<style name="AgendaListHeaderText">
 		<item name="android:layout_width">wrap_content</item>
 		<item name="android:layout_height">match_parent</item>
-		<item name="android:textSize">13dp</item>
+		<item name="android:textSize">13sp</item>
 		<item name="android:layout_marginTop">5dp</item>
 		<item name="android:layout_marginBottom">5dp</item>
 		<item name="android:layout_marginLeft">5dp</item>
